--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
     "defaultParams": true,
     "destructuring": true,
     "forOf": true,
-    "generators": false,
+    "generators": true,
     "modules": true,
     "objectLiteralComputedProperties": true,
     "objectLiteralDuplicateProperties": false,
