--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^3.0.6",
     "co": "^4.6.0",
     "dotenv": "^1.2.0",
+    "lodash": "^3.10.1",
     "request": "^2.67.0",
     "ws": "^0.8.1"
   }
